# ray-n-vader

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1
src/: main.cpp
src/entities/: bullet.cpp  bullet.h  collision_handler.cpp  enemy.cpp  enemy.h  enemy_handler.cpp  gui.cpp  player.cpp  player.h
src/headers/: bullet.h  collision_handler.h  enemy.h  game.h  gui.h  player.h
src/scenes/: enemy.cpp  player.cpp  raylib_logo.cpp  start_menu.cpp
